structural-typing/tests/ui/select_mixed_valid_invalid.stderr
error: Unknown field 'emial' in select!. Valid fields: name, email
  --> tests/ui/select_mixed_valid_invalid.rs:3:1
   |
 3 | #[structural]
   | ^^^^^^^^^^^^^
...
11 |     type Invalid = user::select!(name, emial);
   |                    -------------------------- in this macro invocation
   |
   = note: this error originates in the macro `user::select` (in Nightly builds, run with -Z macro-backtrace for more info)
